<resources>
    <string name="app_name">Book My Book</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="use_only_if_not_using_google">(Register only if not using Google)</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_valid_email">Please enter a valid email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to the terms and condition.</string>
    <string name="registery_successfull">You are registered successfully. Your user id is</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Please enter your email address. You will receive a link to change the password.</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">Email sent successfully to reset your password</string>

    <string name="register_success">You are registered successfully.</string>

    <string name="title_complete_profile">COMPLETE YOUR PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_granted">Good Going, you just accepted the permission for storage.</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>

    <string name="image_selection_failed">Image selection Failed!</string>

    <string name="err_msg_enter_mobile_number">Please enter your mobile number.</string>

    <string name="msg_profile_update_success">Your profile was updated successfully.</string>
    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_Sell">Sell</string>
    <string name="title_Buy">Buy</string>
    <string name="title_Orders">Orders</string>
    <string name="title_Share">SHARE</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_product">Add Product</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="title_settings">SETTINGS</string>

    <string name="lbl_edit">Edit Profile</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="title_edit_profile">EDIT PROFILE</string>

    <string name="title_add_product">ADD A BOOK</string>
    <string name="et_hint_product_title">Book Title</string>
    <string name="et_hint_product_publisher">Publisher</string>
    <string name="et_hint_product_price">Price (₹)</string>
    <string name="et_hint_product_isbn">ISBN (OPTIONAL)</string>
    <string name="et_hint_product_description">Description</string>
    <string name="et_hint_product_quantity">Quantity</string>
    <string name="tv_product_condition">Condition of Book/Product</string>
    <string name="rb_good">Good</string>
    <string name="rb_bad">Bad</string>
    <string name="rb_average">Average</string>

    <string name="err_msg_select_product_image">Please select an image.</string>
    <string name="err_msg_enter_product_title">Please enter the book title.</string>
    <string name="err_msg_enter_product_publisher">Please enter the publisher.</string>
    <string name="err_msg_enter_product_price">Please enter the price.</string>
    <string name="err_msg_enter_product_description">Please enter a description.</string>
    <string name="err_msg_enter_product_quantity">Please enter the quantity available.</string>

    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>

    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">ITEM DETAILS</string>
    <string name="lbl_product_description">Item Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>

    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product is added to your cart.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_service_charge">Service Charge (UwU)</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="good_condition">Good Condition</string>
    <string name="bad_condition">Bad Condition</string>
    <string name="average_condition">Average Condition</string>
    <string name="credits">Made With love by Gurbaaz, Saahir and Rochishnu</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than the stock quantity.</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="et_hint_address">Address</string>
    <string name="et_hint_pin">PIN</string>
    <string name="err_msg_enter_address">Please enter your Address.</string>
    <string name="err_msg_enter_pin">Please enter your PIN Code.</string>
    <string name="title_place_order">PLACE ORDER</string>

    <string name="no_orders_placed_yet">No orders placed !!!</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="status">STATUS</string>

    <string name="order_status_pending">PENDING</string>
    <string name="order_status_delivered">DELIVERED</string>
    <string name="title_order_details">ORDER DETAILS</string>
    <string name="title_sold">SOLD BOOKS</string>
    <string name="no_book_sold">No Book Sold!!!</string>
    <string name="title_transaction">TRANSACTIONS</string>
    <string name="title_Transaction">Transactions</string>
    <string name="title_buy">BUY</string>
    <string name="title_sell">SELL</string>
    <string name="title_Sold">Sold</string>
    <string name="sold_book_details">SOLD BOOK DETAILS</string>
    <string name="lbl_book_price">Book Price</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="lbl_price_per_book">Price Per Book</string>
</resources>