<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dummy_1"
        android:title="Dummy 1"/>

    <item
        android:id="@+id/navigation_buy"
        android:icon="@drawable/ic_vector_buy"
        android:title="@string/title_Buy" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_vector_sell"
        android:title="@string/title_Sell" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_vector_order"
        android:title="@string/title_Transaction"/>

    <item
        android:id="@+id/navigation_dummy_2"
        android:title="Dummy 2" />

<!--    <item-->
<!--        android:id="@+id/navigation_share"-->
<!--        android:icon="@drawable/ic_vector_share"-->
<!--        android:title="@string/title_Share" />-->

</menu>