<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/app_gradient_color_background"
    android:orientation="vertical"
    tools:context=".ui.fragments.TransactionFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        <com.projectfire.bookmybook.custom_view_items.TextViewCustomBold
            android:id="@+id/tv_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:text="@string/title_Orders"
            android:textColor="@color/white"
            android:textSize="@dimen/no_data_found_textSize" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_order_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_no_orders_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/no_orders_placed_yet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/no_data_found_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
            <com.projectfire.bookmybook.custom_view_items.TextViewCustomBold
                android:id="@+id/tv_sold_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:text="@string/title_Sold"
                android:textColor="@color/white"
                android:textSize="@dimen/no_data_found_textSize" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_sold_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_sold_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/no_book_sold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/no_data_found_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>